--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -21,5 +21,9 @@
 <strong>Address:</strong>
 <%= @contact.address %>
 </p>
+<p>
+<strong>Image:</strong>
+<img src="/data/<%=@contact.photo %>" width = "200" height ="200" />
+</p>
 <%= link_to 'Back', contacts_path %>
 <%= link_to 'Edit', edit_contact_path(@contact) %>
