removed unwanted files

--- a/app/views/contacts/home.html.erb
+++ b/app/views/contacts/home.html.erb
@@ -1,3 +1,5 @@
 <h1>Welcome to Contact Manager App</h1>
 <p>To create new click here</p>
-<%= link_to 'New Contact', contacts_path %>
+<%= link_to 'New Contact', new_contact_path %>
+<p>To view list of contacts</p>
+<%=link_to 'All contacts', contacts_path %>
