--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -13,6 +13,7 @@
 <td><%= contact.email_id %></td>
 <td><%= contact.mobile_number %></td>
 <td><%= contact.address %></td>
+<td><img src="/data/<%= contact.photo %>" width = "100" height ="100" /></td>
 <td><%= link_to 'show', contact_path(contact) %>
 <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
 <td><%= link_to 'Destroy', contact_path(contact), method: :delete, data: {confirm: 'Are you sure you want to delete?'} %></td>
