--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,3 +1,4 @@
-<h1>Edit contact</h1>
+<h1 align=center>Edit contact</h1>
 <%= render 'form' %>
-<%= link_to 'Back', contact_path %>
+<p align=center>
+<%= link_to 'Back', contact_path %></p>
