--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -23,7 +23,8 @@
 </p>
 <p>
 <strong>Image:</strong>
-<img src="/data/<%= @contact.photo %>" width = "200" height ="200" />
+<img src="/data/<%= @contact.photo %>" width = "200" height ="200" border="5"/>
 </p>
 <%= link_to 'Back', contacts_path %>
 <%= link_to 'Edit', edit_contact_path(@contact) %>
+<marquee behavior="scroll" direction="left"><img src="/data/bee.gif"/></marquee>
