--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,6 @@
-<h1>New Contact</h1>
+<h1 align=center><img src= "/data/nn.png"/></h1>
 <%= render 'form' %>
+<p align=center>
  <%= link_to 'Back', contacts_path %>
+ </p>
+ <marquee behavior="scroll" direction="left"><img src="/data/bee.gif"/>
