added header and validations

--- a/app/views/contacts/home.html.erb
+++ b/app/views/contacts/home.html.erb
@@ -1,11 +1,19 @@
-<h1 align=center >Welcome to Contact Manager App.....</h1>
-<p align=center>To create new click here</p>
-<p align=center><%= link_to 'New Contact', new_contact_path %></p>
-<p align=center>To view list of contacts</p>
-<p align=center><%=link_to 'All contacts', contacts_path %>
-<marquee behavior="scroll" direction="left"><img src="/data/h.png"/><img src="/data/bee.gif"/></marquee>
-<div class="flip">
-<img src="/data/cnt.png"/>
-</div>
 
-<script type='text/javascript'>(function () { var done = false; var script = document.createElement('script'); script.async = true; script.type = 'text/javascript'; script.src = 'https://widget.purechat.com/VisitorWidget/WidgetScript'; document.getElementsByTagName('HEAD').item(0).appendChild(script); script.onreadystatechange = script.onload = function (e) { if (!done && (!this.readyState || this.readyState == 'loaded' || this.readyState == 'complete')) { var w = new PCWidget({ c: '30fd8eaf-4804-494e-a9fe-5a3595e9689b', f: true }); done = true; } }; })();</script>
+<marquee behavior="scroll" direction="left">
+<img src="/data/h.png"/>
+<img src="/data/bee.gif"/>
+</marquee>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
