--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -3,6 +3,7 @@
 <tr>
 <th>Firstname</th>
 <th>Lastname</th>
+<th>Gender</th>
 <th>Email_id</th>
 <th>Mobile_Number</th>
 <th>Address</th>
@@ -10,6 +11,7 @@
 <tr>
 <td><%= contact.firstname %></td>
 <td><%= contact.lastname %></td>
+<td><%= contact.gender %></td>
 <td><%= contact.email_id %></td>
 <td><%= contact.mobile_number %></td>
 <td><%= contact.address %></td>
