--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -7,7 +7,11 @@
 <strong>Lastname:</strong>
 <%= @contact.lastname %>
 </p>
-
+<p>
+<strong>Gender:</strong>
+<%= @contact.gender %>
+</p>
+<p>
 <strong>Email_id:</strong>
 <%= @contact.email_id %>
 </p>
