--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,12 +1,12 @@
 body
 {
-	color: black;
+	color: #3104B4;
 background-image: url("grass.jpg");
 background-size: cover;
 }
 a:hover
 {
-	background-color: red;
+	background-color: #86B404;
 }
 label
 {
@@ -16,18 +16,33 @@ label
 	margin-right: 1em;
 	display:block;
 }
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+.menu
+{
+	background-image: url("/data/b.jpg");
+	float: left;
+	height:768px;
+	width:200px;
+}
+.pstn
+{
+position: absolute;
+left:0;
+bottom: 0;
+}
+.header
+{
+	background-image: url("/data/b.jpg");
+	width:1366px;
+	top:0px;
+}
+.mge
+{
+	background-image: url("/data/images");
+	height:768px;
+	width:200px
+}
+.footer
+{
+	background-image: url("/data/images");
+	bottom: 0px;
+}
