--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -18,6 +18,10 @@
 <%= f.text_field :lastname %>
 </p>
 <p>
+<%= f.label :gender %>  
+<%= f.select :gender, options_for_select([["select here"], ["male"], ["female"]]) %>
+</p>
+<p>
 <%= f.label :email_id %> 
  <%= f.text_field :email_id %>
 </p>
@@ -37,5 +41,4 @@
  <%= f.submit %>
  </p>
  <% end %>
-<script type='text/javascript'>(function () { var done = false; var script = document.createElement('script'); script.async = true; script.type = 'text/javascript'; script.src = 'https://widget.purechat.com/VisitorWidget/WidgetScript'; document.getElementsByTagName('HEAD').item(0).appendChild(script); script.onreadystatechange = script.onload = function (e) { if (!done && (!this.readyState || this.readyState == 'loaded' || this.readyState == 'complete')) { var w = new PCWidget({ c: '30fd8eaf-4804-494e-a9fe-5a3595e9689b', f: true }); done = true; } }; })();</script>
 
