--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+<div class="header">
+<h1 style="text-align:center" >
+Welcome to Contact Manager App.....
+</h1>
+</div>
+<div class="menu">
+<b>Menu</b>
+<br>
+<p align=center>
+To create new click here
+</p>
+<p align=center>
+<%= link_to 'New Contact', new_contact_path %>
+</p>
+<br>
+<p align=center>
+To view list of contacts
+</p>
+<p align=center>
+<%=link_to 'All contacts', contacts_path %>
+<br>
+<div class="pstn">
+<img src="/data/cnt.png" />
+</div>
+</div>
+
   <title>Contactbook</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -17,4 +43,5 @@
 <%= yield %>
 
 </body>
+
 </html>
