--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,12 +1,13 @@
 body
 {
-	color: #3104B4;
-background-image: url("grass.jpg");
+	color: #007065;
+background-color: #dcdcdc;
 background-size: cover;
+margin: 0px;
 }
-a:hover
+h1
 {
-	background-color: #86B404;
+	margin: 0px;
 }
 label
 {
@@ -18,7 +19,6 @@ label
 }
 .menu
 {
-	background-image: url("/data/b.jpg");
 	float: left;
 	height:768px;
 	width:200px;
@@ -29,20 +29,43 @@ position: absolute;
 left:0;
 bottom: 0;
 }
-.header
+.algn
 {
-	background-image: url("/data/b.jpg");
-	width:1366px;
-	top:0px;
+	margin-left: 150px;
+	line-height: 150%;
+
 }
-.mge
+.imgalgn
 {
-	background-image: url("/data/images");
-	height:768px;
-	width:200px
+    margin-top: 12px;
+	margin-left: 0px;
+	float: left;
+} 
+div.header
+{
+	background-color: #007065;
+	width:100%;
+	height: 80px;
+	position: relative;
+	margin: 0px;
+	color: white;
+	padding-top: 8px;
 }
-.footer
+div.header p
 {
-	background-image: url("/data/images");
-	bottom: 0px;
+	
+	text-align:right;
+	 margin:0px;
+}
+
+footer
+{
+	background-color: #007065;
+	 clear: both;
+    text-align: center;
+    color: white;
+	height: 50px;
+    bottom: 0px;
+    width: 100%;
+    padding-top: 8px;
 }
