--- a/app/views/contacts/home.html.erb
+++ b/app/views/contacts/home.html.erb
@@ -1,17 +1,23 @@
-<div class="menu">
+<div class="aboutus">
 <b>About us</b>
 <br>
 <p align=center>
-<marquee behaviour="slide" direction="up" scrollamount="1"> Welcome to contact manager app ,Our app allows you to easily maintain contacts in online there by reducing your tension to to backup your contacts</marquee>
-<%=link_to 'New Contact', new_contact_path %>
-<div class="pstn">
-<img src="/data/cnt.png" />
+	<marquee behaviour="slide" direction="up" scrollamount="1">
+		 Welcome to contact manager app ,Our app allows you to easily maintain contacts in online there by reducing your tension to to backup your contacts
+	 </marquee>
+<div class="bottom-link">
+	<li>
+		<%= link_to 'New Contact', new_contact_path %>
+	</li>
+</div>
+<div class="book-icon">
+		<img src="/data/cnt.png" />
 </div>
 </div>
-<marquee behavior="scroll" direction="left">
-<img src="/data/h.png"/>
-<img src="/data/bee.gif"/>
-</marquee>
+	<marquee behavior="scroll" direction="left">
+		<img src="/data/hai.png"/>
+		<img src="/data/bee.gif"/>
+	</marquee>
 
 
 
