--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,6 @@
-<h1 align=center><img src= "/data/nn.png"/></h1>
-<%= render 'form' %>
+<h1 align=center>New contact</h1>
+		<%= render 'form' %>
 <p align=center>
- <%= link_to 'Back', contacts_path %>
- </p>
- <marquee behavior="scroll" direction="left"><img src="/data/bee.gif"/>
+ 		<%= link_to 'Back', contacts_path %>
+</p>
+ 
