--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,36 +1,7 @@
-<div containter style="height:600px;width:800px;margin-left:200px">
-<u><h1 align=left>All contacts</h1></u>
-
-<% @contacts.each do |contact| %>
-
-<div class="imgalgn">
-<img src="/data/<%= contact.photo %>" width = "100" height ="110" />
-</div>
-<div class="algn">
-<u>
-<strong><%= contact.firstname %></u></strong><br>
-Lastname &nbsp &nbsp 
-<%= contact.lastname %><br>
-Gender &nbsp &nbsp &nbsp 
-<%= contact.gender %><br>
-Email&nbsp &nbsp &nbsp &nbsp &nbsp 
-<%= contact.email_id %><br>
-Phone&nbsp &nbsp &nbsp &nbsp &nbsp 
-<%= contact.mobile_number %><br>
-Address&nbsp &nbsp &nbsp &nbsp 
-<%= contact.address %><br>
-
-<!--<%= link_to 'show', contact_path(contact) %>
-<%= link_to 'Edit', edit_contact_path(contact) %></td>
---><%= link_to 'Destroy', contact_path(contact), method: :delete, data: {confirm: 'Are you sure you want to delete?'} %></td>
-</div>
-<hr>
-<% end %>
-</div>
+<h2><u>All contacts</u></h2>
+<%= render 'form2' %>
+<div class="bottom-link">
+<li>
 <%= link_to 'New Contact', new_contact_path %>
-
-<!--<script type='text/javascript'>(function () { var done = false; var script = document.createElement('script'); script.async = true; script.type = 'text/javascript'; script.src = 'https://widget.purechat.com/VisitorWidget/WidgetScript'; document.getElementsByTagName('HEAD').item(0).appendChild(script); script.onreadystatechange = script.onload = function (e) { if (!done && (!this.readyState || this.readyState == 'loaded' || this.readyState == 'complete')) { var w = new PCWidget({ c: '30fd8eaf-4804-494e-a9fe-5a3595e9689b', f: true }); done = true; } }; })();</script>
-=end
--->
-
-
+</li>
+</div>
