actionmailer and active admin

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -22,8 +22,8 @@
 <%= f.select :gender, options_for_select([[""], ["male"], ["female"]]) %>
 </p>
 <p>
-<%= f.label :email_id %> 
- <%= f.text_field :email_id %>
+<%= f.label :email %> 
+ <%= f.text_field :email %>
 </p>
 <p>
 <%= f.label :mobile_number %>
