--- a/app/views/contacts/home.html.erb
+++ b/app/views/contacts/home.html.erb
@@ -3,7 +3,7 @@
 <br>
 <p align=center>
 	<marquee behaviour="slide" direction="up" scrollamount="1">
-		 Welcome to contact manager app ,Our app allows you to easily maintain contacts in online there by reducing your tension to to backup your contacts
+		 Welcome to contact manager app ,Our app allows you to easily maintain contacts in online there by reducing your tension to backup your contacts
 	 </marquee>
 <div class="bottom-link">
 	<li>
