--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,6 +69,7 @@ h2
 {
 	margin: 0px;
 	padding-left: 200px;
+    padding-right: 200px;
 	line-height: 70px;
 }
 div.header-left
@@ -114,7 +115,7 @@ h4
 }
 .contact-container
 {
-    width:70%;
+    width:100%;
     margin: 0 auto;
     height: 150px;
     border-bottom: 1px solid black;
@@ -137,9 +138,10 @@ div.contact-image
 }
 .bottom-link li 
 {
-   
+   float: right;
    list-style: none;
    display:inline;
+   padding:20px;
 }
 .bottom-link li a
 {
@@ -156,3 +158,16 @@ div.show-image
 
     float:right;
 }
+div.whole-container
+{
+    height:100%;
+    width:100%;
+}
+#auto-search
+{
+    margin: 0 auto;
+    padding: 20px;
+    width:70%;
+    height:300px;
+}
+
